public/css/styles.css
/* ... */
@media screen and (max-width: 550px) {
  .home-container h1 {
    font-size: 40px;
  }
  #years {
    font-weight: 700;
  }
  .home-container h3 {
    font-size: 22px;
  }
  .new-dino {
    max-width: 100%;
  }

  .new-btn {
    border-bottom-width: 10px;
    margin-right: 20px;
  }
  .hide-desktop {
    color: #222;
  }
  .thank-you-body {
    height: 80vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem 0.25rem;
  }
  .thank-you-img img {
    width: 360px;
    margin-top: 0;
  }
  .thank-you-header {
    text-transform: uppercase;
    padding: 0.25rem;
  }
  .thank-you-header h1 {
    font-size: 24px;
    text-align: center;
    padding-bottom: 0.5rem;
  }
  .thank-you-link {
    padding-top: 0.25rem;
  }
  .thank-you-link a {
    text-decoration: none;
    padding: 0.25rem 0.5rem;
    background-color: rgb(250, 101, 1);
    border-radius: 5px;
    color: #fff;
  }
  .thank-you-link a:hover {
    color: #fff;
    background-color: rgb(253, 148, 36);
  }
  .thank-you-inner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .thank-you-inner h2 {
    margin: 0.5rem;
    font-weight: 400;
    font-size: 16px;
    padding: 1rem 0.5rem;
  }

  .thank-you-inner h3 {
    padding: 0.5rem;
    font-weight: 300;
    font-size: 13px;
    text-align: center;
    margin-bottom: 0.75rem;
  }
  .thank-you-inner li {
    list-style: none;
    padding: 0.25rem;
    font-size: 10px;
  }
  .thank-you-inner li:hover {
    color: #555;
  }
  .thank-you-inner a {
    text-decoration: none;
    color: var(--main-font);
  }
  .thank-you-inner li:last-of-type {
    padding-bottom: 0.1.5rem;
  }
  .modal-select #tickets,
  .modal-select #trip-length {
    width: 200px;
    height: 30px;
    font-size: 16px;
  }
  .modal-section label {
    font-size: 14px;
  }
  .pricing-button-modal {
    padding: 10px 25px;
    text-decoration: none;
    margin: 10px;
  }
  .error-wrapper h1 {
    font-size: 24px;
    text-transform: uppercase;
    font-weight: 700;
    color: #fff;
    padding: 0.5rem;
  }
  .error-wrapper h2 {
    font-size: 16px;
    font-weight: 400;
    color: #fff;
    padding-bottom: 0.5rem;
  }
  .error-wrapper a {
    text-decoration: none;
    padding: 0.75rem 1.25rem;
    background-color: rgb(250, 101, 1);
    border-radius: 5px;
    color: #fff;
  }
  .login-link a {
    font-size: 12px;
  }
  .login-link span {
    font-size: 12px;
  }
  .logout-link-btn {
    font-size: 12px;
    height: 10px;
    padding-bottom: 1rem;
  }
  .greeting {
    display: none;
  }
  .dino-add-btn {
    font-size: 10px;
    padding: 0.5rem 0.5rem;
    transform: translate(-3%, 25%);
  }
  .add-dino-version {
    font-size: 0.6rem;
    transform: translate(5%, 125%);
  }
  .aside-section:last-of-type {
    margin-bottom: 20px;
  }
  .main-btn {
    font-size: 16px;
    color: #fff;
    background-color: rgb(250, 101, 1);
    padding: 8px 12px;
    border-radius: 8px;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
    margin-top: 20px;
    cursor: pointer;
  }
}

@media screen and (max-width: 425px) {
  .hide-desktop {
    font-size: 30px;
  }
  .thank-you-body {
    height: 80vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 2rem 0.25rem;
  }
  .thank-you-img img {
    width: 360px;
    margin-top: 0;
  }
  .thank-you-header {
    text-transform: uppercase;
    padding: 0.25rem;
  }
  .thank-you-header h1 {
    font-size: 24px;
    text-align: center;
    padding-bottom: 0.5rem;
  }
  .thank-you-link {
    padding-top: 0.25rem;
  }
  .thank-you-link a {
    text-decoration: none;
    padding: 0.25rem 0.5rem;
    background-color: rgb(250, 101, 1);
    border-radius: 5px;
    color: #fff;
  }
  .thank-you-link a:hover {
    color: #fff;
    background-color: rgb(253, 148, 36);
  }
  .thank-you-inner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .thank-you-inner h2 {
    margin: 0.5rem;
    font-weight: 400;
    font-size: 16px;
    padding: 1rem 0.5rem;
  }

  .thank-you-inner h3 {
    padding: 0.5rem;
    font-weight: 300;
    font-size: 13px;
    text-align: center;
    margin-bottom: 0.75rem;
  }
  .thank-you-inner li {
    list-style: none;
    padding: 0.25rem;
    font-size: 10px;
  }
  .thank-you-inner li:hover {
    color: #555;
  }
  .thank-you-inner a {
    text-decoration: none;
    color: var(--main-font);
  }
  .thank-you-inner li:last-of-type {
    padding-bottom: 0.1.5rem;
  }
  .pricing-button-modal {
    padding: 8px 15px;
    font-size: 12px;
  }
  .close-modal {
    left: 43%;
  }
  .modal {
    height: 70%;
  }
}
/* ... */

